# ChangeLog for x11-plugins/gkrellmms
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/ChangeLog,v 1.12 2003/02/19 21:59:40 mholzer Exp $

*gkrellmms-2.1.8 (19 Feb 2003)

  19 Feb 2003; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.8.ebuild
  files/digest-gkrellmms-2.1.8 :
  Version bumped.

*gkrellmms-2.1.6 (16 Jan 2003)

  19 Feb 2003; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.6.ebuild :
  Marking as stable.

  16 Jan 2003; Seemant Kulleen <seemant@gentoo.org> gkrellmms-2.1.6.ebuild
  files/digest-gkrellmms-2.1.6 :

  Version bump thanks to: mail@slysoft.de (Thomas Arnhold) in bug #13847.

*gkrellmms-2.1.3 (14 Dec 2002)

  14 Dec 2002; Seemant Kulleen <seemant@gentoo.org> gkrellmms-2.1.3.ebuild
  files/digest-gkrellmms-2.1.3 :

  Version bump.  Added to ~ppc profile as well.

*gkrellmms-0.5.8 (16 Oct 2002)

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  16 Oct 2002; Seemant Kulleen <seemant@gentoo.org> gkrellmms-0.5.8.ebuild
  files/digest-gkrellmms-0.5.8 :

  Version bump for the gtk+1 version.  both versions are SLOTified,
  obviously.

*gkrellmms-2.1.2 (15 Oct 2002)

  15 Oct 2002; Seemant Kulleen <seemant@gentoo.org> gkrellmms-2.1.2.ebuild
  files/digest-gkrellmms-2.1.2 :

  New version for gkrellm2 (based on gtk2).  Thanks to:
  43fcmm6rz001@sneakemail.com (Tobias Quinn) in bug #7362, though this one
  is a more updated version.  Also, pazzop@wanadoo.nl (AlterEgo) had
  submitted an ebuild in bug #7384.

*gkrellmms-0.5.6 (27 May 2002)

  11 Sep 2002; Owen Stampflee <owen@gentoo.org> :
  Added PPC to KEYWORDS.

  29 Aug 2002; Seemant Kulleen <seemant@gentoo.org> * :

  Relocated to x11-plugins

  27 May 2002; Seemant Kulleen <seemant@gentoo.org>

  The patch was applied and upstream upped the version number.

*gkrellmms-0.5.5-r1 (12 Mar 2002)

  12 Mar 2002; Seemant Kulleen <seemant@gentoo.org>
