@@ -1,6 +1,11 @@
 # ChangeLog for x11-plugins/gkrellmms
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/ChangeLog,v 1.12 2003/02/19 21:59:40 mholzer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/ChangeLog,v 1.13 2003/03/23 15:05:53 mholzer Exp $
+
+*gkrellmms-2.1.9 (23 Mar 2003)
+
+  23 Mar 2003; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.9.ebuild:
+  Version bumped.
 
 *gkrellmms-2.1.8 (19 Feb 2003)
 
